--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 /*CSS Reset*/
 *,*:active {
-	margine:0;
+	margin:0;
 	padding:0;
 	border:0;
 }
@@ -57,6 +57,12 @@ h1{
 
 h2{
 	color: #FFFFFF;
+	text-align:center;
+}
+
+h4,h5,h6{
+	color:#FFFFFF;
+	text-align: center;
 }
 
 p{
